syntax = "proto3";
package liubaninc.m0.utxo;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";
import "utxo/token.proto";
import "utxo/input.proto";

option go_package = "github.com/liubaninc/m0/x/utxo/types";

// Query defines the gRPC querier service.
service Query {
	rpc Token(QueryGetTokenRequest) returns (QueryGetTokenResponse) {
		option (google.api.http).get = "/liubaninc/m0/utxo/token/{name}";
	}
	rpc TokenAll(QueryAllTokenRequest) returns (QueryAllTokenResponse) {
		option (google.api.http).get = "/liubaninc/m0/utxo/token";
	}

	rpc Input(QueryInputRequest) returns (QueryInputResponse) {
		option (google.api.http).get = "/liubaninc/m0/utxo/input/{address}/{amounts}";
	}

	rpc InputAll(QueryAllInputRequest) returns (QueryAllInputResponse) {
		option (google.api.http).get = "/liubaninc/m0/utxo/input/{address}/{denom}";
	}
	rpc Tampering(TamperingRequest) returns (TamperingResponse) {
    		option (google.api.http).get = "/liubaninc/m0/utxo/input/{address}/{amount}";
    }
}


message TamperingRequest {
	string address = 1;
	string amount = 2;
}
message TamperingResponse {
    repeated Input outs = 1;
}

message QueryGetTokenRequest {
	string name = 1;
}

message QueryGetTokenResponse {
	Token Token = 1;
}

message QueryAllTokenRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokenResponse {
	repeated Token Token = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryInputRequest {
	string address = 1;
	string amounts = 2;
	int64 lock = 3;
}

message QueryInputResponse {
	repeated cosmos.base.v1beta1.Coin amount = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
	repeated Input inputs = 2;
}

message QueryAllInputRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
	string address = 2;
	string denom = 3;
}

message QueryAllInputResponse {
	cosmos.base.query.v1beta1.PageResponse pagination = 1;
	cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
	repeated Input inputs = 3;
}